Update message when user is verified
**Why**:
New copy for users when they are verified
at loa3.

--- a/app/views/sign_up/completions/show.html.slim
+++ b/app/views/sign_up/completions/show.html.slim
@@ -3,8 +3,8 @@
 .clearfix
   .col-10.sm-col-12.mx-auto
     .center
-      = image_tag(asset_url(@view_model.image_name), width: 97, alt: '', class: 'mb2')
-    h1.h3.mb3.my0.regular = @view_model.heading
+      = image_tag(asset_url(@view_model.image_name), width: 140, alt: '', class: 'mb2')
+    h1.h3.mb3.my0.regular.center = @view_model.heading
 
     = render @view_model.service_provider_partial
 
