--- a/app/views/sign_up/completions/show.html.slim
+++ b/app/views/sign_up/completions/show.html.slim
@@ -6,6 +6,17 @@
       = image_tag(asset_url(@view_model.image_name), width: 97, alt: '', class: 'mb2')
     h1.h3.mb3.my0.regular = @view_model.heading
 
-    = render @view_model.service_provider_partial
+    .mt2.p3.col-12.center.border-box.border.border-teal.rounded-xl
+      p = t('idv.messages.return_to_sp_html', sp: decorated_session.sp_name)
+      p
+        = button_to t('forms.buttons.continue'), sign_up_completed_path, \
+                  class: 'btn btn-primary btn-wide'
+    p.mr5.ml5.mt3.mb3
+      = t('help_text.requested_attributes.intro_html', app_name: APP_NAME,
+        sp: content_tag(:strong, decorated_session.sp_agency))
+
+    <div class='ml5 mr5' >
+      = render @view_model.requested_attributes_partial, view_model: @view_model
+    </div>
 
     = link_to t('idv.messages.return_to_profile'), profile_path
