Update slim_lint from 0.14.0 to 0.15.1
And fix offenses

--- a/app/views/voice/otp/show.xml.slim
+++ b/app/views/voice/otp/show.xml.slim
@@ -1,9 +1,9 @@
 doctype xml
-Response
-  Say language="#{I18n.locale}"
+response
+  say language="#{I18n.locale}"
     = @message
   - if @action_url
-    Gather numDigits="1" action=@action_url
-      Say language="#{I18n.locale}"
+    gather numDigits="1" action=@action_url
+      say language="#{I18n.locale}"
         = t('voice.otp.repeat_instructions')
-  Hangup /
+  hangup /
