Use DeviceDetector for parsing user agents
**Why**: It's almost 3 times as fast as the Browser gem.

--- a/app/views/exception_notifier/_session.text.erb
+++ b/app/views/exception_notifier/_session.text.erb
@@ -1,8 +1,8 @@
-<% browser = Browser.new(@request.user_agent) %>
+<% browser = DeviceDetector.new(@request.user_agent) %>
 Browser Name: <%= browser.name %>
 Browser Version: <%= browser.full_version %>
-Browser Platform: <%= browser.platform %> <%= browser.platform.version %>
-Browser Device: <%= browser.device.name %>
+Browser Platform: <%= browser.os_name %> <%= browser.os_full_version %>
+Browser Device: <%= browser.device_name %>
 Browser Bot?: <%= browser.bot? %>
 
 Referer: <%= @request.referer %>
