--- a/app/views/verify/_hardfail4.html.slim
+++ b/app/views/verify/_hardfail4.html.slim
@@ -5,6 +5,6 @@ p.mb1 = t('idv.messages.hardfail', hours: Figaro.env.idv_attempt_window_in_hours
     decorated_session.sp_return_url,
     class: 'btn btn-primary btn-wide'
 hr.mt2
-.mt2 = link_to t('idv.messages.help_center'), MarketingSite.help_url
+.mt2 = link_to t('idv.messages.help_center_html').strip_html_tags, MarketingSite.help_url
 .mt2
   = link_to t('idv.messages.return_to_profile', app: APP_NAME), profile_path
