--- a/app/views/verify/_no_sp_hardfail.html.slim
+++ b/app/views/verify/_no_sp_hardfail.html.slim
@@ -1,6 +1,6 @@
 .mt2.p3.col-12.center.border-box.border.border-teal.rounded-xl
   p.mb3.fs-20p
-    = t('idv.messages.help_center')
+    = t('idv.messages.help_center_html')
   = link_to t('idv.buttons.continue_plain'),
     MarketingSite.help_url,
     class: 'btn btn-primary btn-wide'
