Capitalize TwiML tags; ignore slim-lint offense
**Why**: TwiML tags are case-sensitive according to Twilio
documentation, so we need to ignore the `TagCase` slim-lint offense
for `app/views/voice/otp/show.xml.slim`. For some reason, using the
exclude option under `TagCase` doesn't work, so I had to ignore the
file globally.

--- a/app/views/voice/otp/show.xml.slim
+++ b/app/views/voice/otp/show.xml.slim
@@ -1,9 +1,9 @@
 doctype xml
 response
-  say language="#{I18n.locale}"
+  Say language="#{I18n.locale}"
     = @message
   - if @action_url
-    gather numDigits="1" action=@action_url
-      say language="#{I18n.locale}"
+    Gather numDigits="1" action=@action_url
+      Say language="#{I18n.locale}"
         = t('voice.otp.repeat_instructions')
-  hangup /
+  Hangup /
