Update verify messages with app name
**Why**:
Clarify which entity is verifying the users
identity. Updated styles to be more consistent

--- a/app/views/sign_up/completions/_show_identities.html.slim
+++ b/app/views/sign_up/completions/_show_identities.html.slim
@@ -1,6 +1,6 @@
 - identities = @view_model.identities
-.mt2.mb3.p3.col-12.center.border-box.border.border-teal.rounded-xl
-  p
+.mt2.mb3.py2.px3.col-12.center.border-box.border.border-teal.rounded-xl
+  p.fs-20p
     - if identities.length > 1
       = t('idv.messages.agencies_login')
     - else
