--- a/app/views/sign_up/completions/_show_sp.html.slim
+++ b/app/views/sign_up/completions/_show_sp.html.slim
@@ -1,5 +1,5 @@
-.mt2.p3.col-12.center.border-box.border.border-teal.rounded-xl
-  p = t('idv.messages.return_to_sp_html', sp: decorated_session.sp_name)
+.mt2.px3.py2.col-12.center.border-box.border.border-teal.rounded-xl
+  p.fs-20p = t('idv.messages.return_to_sp_html', sp: decorated_session.sp_name)
   p
     = button_to t('forms.buttons.continue'), sign_up_completed_path, \
               class: 'btn btn-primary btn-wide'
