Allow cancel out of usps confirm screen
**Why**: There is no option for the user to cancel or to go to their account

**How** Added a cancel link on the bottom of the form that allows user to go back to their account (and logout, etc.)

added newline to end of file

--- a/app/views/users/verify_account/index.html.slim
+++ b/app/views/users/verify_account/index.html.slim
@@ -13,3 +13,5 @@ p.mt-tiny.mb0 = t('forms.verify_profile.instructions')
   = link_to t('idv.messages.usps.resend'), verify_usps_path,
     class: 'block mb2'
 = link_to t('idv.messages.usps.bad_address'), verify_phone_path
+.mt2.pt1.border-top
+  = link_to t('idv.buttons.cancel'), account_path
