--- a/app/views/sign_up/registrations/_required_pii_accordion.html.slim
+++ b/app/views/sign_up/registrations/_required_pii_accordion.html.slim
@@ -10,7 +10,7 @@ p.clearfix
           size: '40', alt: '', class: 'mt-tiny col col-1')
       span.col.col-11.pl2 = t('devise.registrations.start.bullet_1_html')
     p.clearfix
-      = image_tag(asset_url('get-started/2FA.svg'), size: '40', alt: '', 
+      = image_tag(asset_url('get-started/2FA.svg'), size: '40', alt: '',
         class: 'mt-tiny col col-1')
       span.col.col-11.pl2 = t('devise.registrations.start.bullet_2_html')
     p.clearfix
@@ -22,10 +22,12 @@ p.clearfix
           size: '40', alt: '', class: 'mt-tiny col col-1')
       span.col.col-11.pl2 = t('devise.registrations.start.bullet_4_html')
     p.clearfix
-      = image_tag(asset_url('get-started/financial.svg'), 
+      = image_tag(asset_url('get-started/financial.svg'),
         size: '40', alt: '', class: 'mt-tiny col col-1')
       span.col.col-11.pl2 = t('devise.registrations.start.bullet_5_html')
     p.clearfix
       = image_tag(asset_url('p-key.svg'), size: '40', alt: '', class: 'mt-tiny col col-1')
       span.col.col-11.pl2 = t('devise.registrations.start.bullet_6_html')
-    p.mb3 = link_to t('devise.registrations.start.learn_more'), MarketingSite.help_url, target: '_blank'
+    p.mb3 = link_to t('devise.registrations.start.learn_more'),
+      MarketingSite.help_url,
+      target: '_blank'
