--- a/app/assets/stylesheets/variables/_app.scss
+++ b/app/assets/stylesheets/variables/_app.scss
@@ -16,7 +16,7 @@ $heading-font-weight: bold !default;
 $heading-line-height: 1.3 !default;
 $caps-letter-spacing: 1px !default;
 
-$line-height-0: 0.75 !default; // For when a tighter-than-normal leading is desired.
+$line-height-0: .75 !default; // For when a tighter-than-normal leading is desired.
 $line-height-1: 1 !default;
 $line-height-2: 1.3 !default;
 $line-height-3: 1.75 !default;
