--- a/app/views/two_factor_authentication/otp_verification/show.html.slim
+++ b/app/views/two_factor_authentication/otp_verification/show.html.slim
@@ -2,9 +2,7 @@
 
 h1.h3.my0 = @presenter.header
 
-p == @presenter.phone_number_message
-
-= form_tag(:login_otp, method: :post, role: 'form', class: 'mt3') do
+= form_tag(:login_otp, method: :post, role: 'form', class: 'mt3 sm-mt4') do
   = render @presenter.reauthn_hidden_field_partial
   = label_tag 'code', \
     t('simple_form.required.html') + t('forms.two_factor.code'), \
