--- a/app/views/shared/_user_verify_password.html.slim
+++ b/app/views/shared/_user_verify_password.html.slim
@@ -1,3 +1,5 @@
+p = t('idv.messages.sessions.review_message')
+
 = simple_form_for(current_user, url: update_path,
     html: { autocomplete: 'off', method: :put, role: 'form' }) do |f|
   = f.input :password, label: t('idv.form.password'), required: true
