LG-134 Update delete account message
**Why**: The reauthenticate process reuses edit screen verbiage which forces the text to include a factor that is changing (ie phone number).

**How**: We expanded the reauthenticate verbiage to allow for full text messages that don't have a specific factor that is changing. This new feature allows us to give full verbiage for delete account while reusing the reauthenticate code.

--- a/app/views/mfa_confirmation/new.html.slim
+++ b/app/views/mfa_confirmation/new.html.slim
@@ -1,7 +1,8 @@
 - title t('titles.passwords.confirm')
 
 h1.h3.my0 = t('headings.passwords.confirm')
-p.mt-tiny.mb0 = t('help_text.change_factor', factor: user_session[:factor_to_change])
+p.mt-tiny.mb0 = user_session[:no_factor_message] || t('help_text.change_factor',
+        factor: user_session[:factor_to_change])
 = simple_form_for(current_user,
                   url: reauthn_user_password_path,
                   html: { autocomplete: 'off', role: 'form', method: 'post' }) do |f|
