--- a/app/views/two_factor_authentication/otp_verification/show.html.slim
+++ b/app/views/two_factor_authentication/otp_verification/show.html.slim
@@ -18,7 +18,9 @@ p == @presenter.phone_number_message
   - if @presenter.remember_device_available?
     .border.col-9.rounded-lg.mt2
       = check_box_tag 'remember_device', true, false, class: 'my2 ml2 mr1'
-      = label_tag 'remember_device', 'Remember this device', class: 'blue'
+      = label_tag 'remember_device',
+        t('forms.messages.remember_device', duration: Figaro.env.remember_device_expiration_days),
+        class: 'blue'
 
 = render 'shared/fallback_links', presenter: @presenter
 = render 'shared/cancel', link: @presenter.cancel_link
