LG-162: Multiple 2FA options during registration
**Why**: To give users more choice during account creation.
The current options are: SMS, Voice, Authentication app. PIV/CAC will
be added later in the menu, although it is already available if you
know the URL.

--- a/app/views/users/piv_cac_authentication_setup/new.html.slim
+++ b/app/views/users/piv_cac_authentication_setup/new.html.slim
@@ -6,6 +6,6 @@ p.mt-tiny.mb3 = @presenter.description
 = link_to @presenter.piv_cac_capture_text,
               @presenter.piv_cac_service_link,
               class: 'btn btn-primary'
-= render 'shared/cancel', link: account_path
+= render 'shared/cancel_or_back_to_options'
 
 == javascript_pack_tag 'clipboard'
