--- a/app/views/users/phones/edit.html.slim
+++ b/app/views/users/phones/edit.html.slim
@@ -6,6 +6,19 @@ h1.h3.my0 = t('headings.edit_info.phone')
     data: { unsupported_area_codes: unsupported_area_codes,
       international_phone_form: true },
     url: manage_phone_path) do |f|
-  = render 'users/shared/phone_input', f: f
+  .sm-col-8.js-intl-tel-code-select
+    = f.input :international_code,
+      collection: international_phone_codes,
+      include_blank: false,
+      input_html: { class: 'international-code' }
+  .sm-col-8.mb3
+    = f.label :phone
+      strong.left = @presenter.label
+    = f.input :phone, as: :tel, label: false, required: true,
+        input_html: { class: 'phone col-8 mb4' }
+  = render 'users/shared/otp_delivery_preference_selection'
   = f.button :submit, t('forms.buttons.submit.confirm_change')
 = render 'shared/cancel', link: account_path
+
+= stylesheet_link_tag 'intl-tel-number/intlTelInput'
+= javascript_pack_tag 'intl-tel-input'
