--- a/app/views/users/totp_setup/new.html.slim
+++ b/app/views/users/totp_setup/new.html.slim
@@ -42,6 +42,7 @@ ul.list-reset
           .col.col-6.sm-col-5.px1
             = submit_tag t('forms.buttons.submit.default'),
               class: 'col-12 btn btn-primary align-top'
-= render 'shared/cancel', link: account_path
+
+= render 'shared/cancel_or_back_to_options'
 
 == javascript_pack_tag 'clipboard'
