LG-211 Allow looking up users via web interface
**Why**: When troubleshooting issues reported by users, it is
cumbersome to have to connect to the VPN, then SSH into the servers,
then look up a user in the Rails console, or look at their events in
Kibana. It would be much faster and easier to look them up via the
website.

**How**: Add a page where privileged users can look up users and see
pertinent information related to their account. Only users who are
flagged with the `admin` or `tech` role can access that page.

--- a/app/views/accounts/_account_item.html.slim
+++ b/app/views/accounts/_account_item.html.slim
@@ -7,5 +7,5 @@
   .col.col-4.right-align
     - if local_assigns.key? :path
       = render action, path: path, name: name
-    - else
+    - elsif local_assigns.key? :action
       = render action
