--- a/app/assets/javascripts/intl-tel-input.js.erb
+++ b/app/assets/javascripts/intl-tel-input.js.erb
@@ -1,12 +1,17 @@
-var telInput = $("#phone")
+// Setting hidden input for intl code
+$("#user_phone_form_international_code").prop('disabled', true);
+$("#user_phone_form_international_code_hidden").prop('disabled', false);
+
+var countryData = $.fn.intlTelInput.getCountryData(),
+  telInput = $("#phone");
 
 // initialise plugin
 telInput.intlTelInput({
   utilsScript: "<%= asset_path 'intl-tel-number/utils.js' %>"
 });
 
-// getting country code
-$("#phone").on("countrychange", function(e, countryData) {
-  $(".js-intl-tel-code").val(countryData.dialCode);
-  console.log(countryData.dialCode);
+// inserting country code on dropdown change
+telInput.on("countrychange", function(e, countryData) {
+  $('#phone').val("+" + countryData.dialCode);
+  $('#user_phone_form_international_code_hidden').val(countryData.iso2.toUpperCase());
 });
