Remove warn - used for testing

--- a/app/views/users/two_factor_authentication_setup/index.html.slim
+++ b/app/views/users/two_factor_authentication_setup/index.html.slim
@@ -29,6 +29,6 @@ p.mt-tiny.mb0
 = render 'shared/cancel', link: destroy_user_session_path
 
 = stylesheet_link_tag 'intl-tel-number/intlTelInput'
-= javascript_include_tag 'jquery.min', content_security_policy_nonce(:script)
+= javascript_include_tag 'jquery.min'
 = javascript_include_tag 'intl-tel-number/intlTelInput.min'
 = javascript_include_tag 'intl-tel-input'
