LG-341 Replace phony_rails with phonelib
**Why**: The `phony_rails` gem doesn't support certain countries,
such as Zambia. Also, we were using both `phony_rails` and `phonelib`
for different purposes. They both do the same thing overall, so it's
best to stick with one, and `phonelib` is the better one since it
supports Zambia and Liberia.

--- a/app/views/idv/review/new.html.slim
+++ b/app/views/idv/review/new.html.slim
@@ -7,5 +7,5 @@ h1.h3 = t('idv.titles.session.review')
 .mt4
   = accordion('review-verified-info', t('idv.messages.review.intro')) do
     - phone = @idv_params[:phone]
-    - formatted_phone = PhoneFormatter.new.format(phone)
+    - formatted_phone = PhoneFormatter.format(phone)
     = render 'shared/pii_review', pii: @idv_params, phone: formatted_phone
