--- a/app/assets/javascripts/intl-tel-input.js.erb
+++ b/app/assets/javascripts/intl-tel-input.js.erb
@@ -3,7 +3,7 @@ $("#user_phone_form_international_code").prop('disabled', true);
 $("#user_phone_form_international_code_hidden").prop('disabled', false);
 
 var countryData = $.fn.intlTelInput.getCountryData(),
-  telInput = $("#phone");
+  telInput = $("#user_phone_form_phone");
 
 // initialise plugin
 telInput.intlTelInput({
@@ -12,6 +12,6 @@ telInput.intlTelInput({
 
 // inserting country code on dropdown change
 telInput.on("countrychange", function(e, countryData) {
-  $('#phone').val("+" + countryData.dialCode);
+  $('#user_phone_form_phone').val("+" + countryData.dialCode);
   $('#user_phone_form_international_code_hidden').val(countryData.iso2.toUpperCase());
 });
