--- a/app/views/users/two_factor_authentication_setup/index.html.slim
+++ b/app/views/users/two_factor_authentication_setup/index.html.slim
@@ -14,13 +14,13 @@ p.mt-tiny.mb0
       collection: international_phone_codes,
       include_blank: false,
       input_html: { class: 'international-code' }
-  = f.input :international_code, disabled: true, as: :hidden,
-    input_html: { id: :user_phone_form_international_code_hidden }
+    = f.input :international_code, disabled: true,
+      input_html: { id: :user_phone_form_international_code_hidden }
   .sm-col-8.mb3
     = f.label :phone, class: 'bold block'
       = t('devise.two_factor_authentication.otp_phone_label')
       = f.input :phone, as: :tel, label: false, required: true,
-        input_html: { class: 'phone col-8 mb4', id: 'phone' }
+        input_html: { class: 'phone col-8 mb4' }
 
   = render 'users/shared/otp_delivery_preference_selection'
   .sm-col-12
