Refactor route helpers

--- a/app/views/idv/address/index.html.slim
+++ b/app/views/idv/address/index.html.slim
@@ -24,4 +24,4 @@ p
   = button_tag t('forms.buttons.continue'), type: 'submit',
     class: 'btn btn-primary col-6 mb2 p2 rounded-lg inline-block'
 
-= render 'shared/cancel', link: verify_cancel_path
+= render 'shared/cancel', link: idv_cancel_path
