--- a/app/views/idv/cancel.html.slim
+++ b/app/views/idv/cancel.html.slim
@@ -2,4 +2,4 @@
 
 h1.h3.my0 = t('idv.titles.cancel')
 p.mt-tiny.mb0 = t('idv.messages.cancel', app: APP_NAME)
-= link_to t('forms.buttons.back'), verify_path
+= link_to t('forms.buttons.back'), idv_path
