--- a/app/views/idv/index.html.slim
+++ b/app/views/idv/index.html.slim
@@ -32,6 +32,6 @@ h1.h3.my0 = t('idv.titles.expectations')
 
 p.mb3 = t('idv.index.paragraph_1')
 p.mb3.bold = t('idv.index.prompt')
-= link_to t('idv.index.continue_link'), verify_session_path, class: 'btn btn-primary btn-wide'
+= link_to t('idv.index.continue_link'), idv_session_path, class: 'btn btn-primary btn-wide'
 
-= render 'shared/cancel', link: verify_cancel_path
+= render 'shared/cancel', link: idv_cancel_path
