--- a/app/views/idv/review/new.html.slim
+++ b/app/views/idv/review/new.html.slim
@@ -2,7 +2,7 @@
 
 h1.h3 = t('idv.titles.session.review')
 
-= render 'shared/user_verify_password', update_path: verify_review_path
+= render 'shared/user_verify_password', update_path: idv_review_path
 
 .mt4
   = accordion('review-verified-info', t('idv.messages.review.intro')) do
