--- a/app/views/idv/confirmations/show.html.slim
+++ b/app/views/idv/confirmations/show.html.slim
@@ -1,3 +1,3 @@
 - title t('titles.personal_key')
 
-= render 'shared/personal_key', code: @code, update_path: verify_confirmations_path
+= render 'shared/personal_key', code: @code, update_path: idv_confirmations_path
