--- a/app/views/idv/phone/_verification_options.html.slim
+++ b/app/views/idv/phone/_verification_options.html.slim
@@ -1,3 +1,3 @@
 p
   = t('idv.form.no_alternate_phone_html',
-    link: link_to(t('idv.form.activate_by_mail'), verify_usps_path))
+    link: link_to(t('idv.form.activate_by_mail'), idv_usps_path))
