--- a/app/views/idv/usps/index.html.slim
+++ b/app/views/idv/usps/index.html.slim
@@ -10,7 +10,7 @@
     strong
       = t('idv.messages.usps.success')
 
-= button_to @decorated_usps.button, verify_usps_path, method: 'put',
+= button_to @decorated_usps.button, idv_usps_path, method: 'put',
   class: 'btn btn-primary btn-wide', form_class: 'inline-block mr2'
 
-= link_to t('idv.messages.usps.bad_address'), verify_phone_path
+= link_to t('idv.messages.usps.bad_address'), idv_phone_path
