Updating JS for intl tel number and fixing tests

--- a/app/views/users/two_factor_authentication_setup/index.html.slim
+++ b/app/views/users/two_factor_authentication_setup/index.html.slim
@@ -29,4 +29,4 @@ p.mt-tiny.mb0
 = stylesheet_link_tag 'intl-tel-number/intlTelInput'
 = javascript_include_tag 'jquery.min'
 = javascript_include_tag 'intl-tel-number/intlTelInput.min'
-= javascript_include_tag 'intl-tel-input'
+= javascript_pack_tag 'intl-tel-input'
