--- a/app/views/shared/_nav_branded.html.slim
+++ b/app/views/shared/_nav_branded.html.slim
@@ -3,5 +3,5 @@ nav.nav-branded.vertical-align.bg-light-blue.center.relative
     alt: APP_NAME, class: 'inline-block align-middle')
   .px-12p.inline-block
     span.absolute.top-0.bottom-0.border-right.my1.sm-my2
-  = image_tag(asset_url("sp-logos/#{decorated_session.sp_logo}"), height: 40,
+  = image_tag(decorated_session.sp_logo_url, height: 40,
     alt: decorated_session.sp_name, class: 'inline-block align-middle')
