LG-356 Add help text to the account creation screen for SAM
**Why**: To give SAM users clear instructions upon account creation

**How**: Conditionally show the sp alert partial and change it's contents for SAM

--- a/app/views/sign_up/registrations/new.html.slim
+++ b/app/views/sign_up/registrations/new.html.slim
@@ -1,5 +1,7 @@
 - title t('titles.registrations.new')
 
+= render 'shared/sp_alert'
+
 h1.h3.my0 = t('headings.registrations.enter_email')
 
 = simple_form_for(@register_user_email_form,
