--- a/app/views/shared/_sp_alert.html.slim
+++ b/app/views/shared/_sp_alert.html.slim
@@ -5,6 +5,8 @@
     p.mb1
       - if current_page?(sign_up_start_path)
         = t("service_providers.#{sp_alert_name}.account_page.body")
+      - elsif current_page?(sign_up_email_path)
+        = t("service_providers.#{sp_alert_name}.create_account_page.body")
       - else
         - account_link = link_to t("service_providers.#{sp_alert_name}.create_account_link"),
           sign_up_email_url(request_id: params[:request_id])
