Add full-width layout

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,76 +1,3 @@
-doctype html
-html lang="#{I18n.locale}" class='no-js'
+- background_cls 'sm-bg-light-blue'
 
-  head
-    meta charset='utf-8'
-    meta name='description' content="#{content_for?(:description) ? yield(:description) : APP_NAME}"
-    meta http-equiv='X-UA-Compatible' content='IE=edge'
-    meta name='msapplication-config' content='none'
-    meta[name='viewport' content='width=device-width, initial-scale=1.0']
-    meta name="format-detection" content="telephone=no"
-    - if content_for?(:meta_refresh)
-      meta http-equiv="refresh" content="#{yield(:meta_refresh)}"
-    - if session_with_trust? || FeatureManagement.disallow_all_web_crawlers?
-      meta name='robots' content='noindex,nofollow'
-
-    title
-      = APP_NAME
-      - if content_for?(:title)
-        = ' - '
-        = yield(:title)
-
-    == stylesheet_link_tag 'application', media: 'all'
-    <!--[if IE 8]>
-      = javascript_include_tag 'es5-shim.min'
-    <![endif]-->
-    == javascript_include_tag 'i18n-strings'
-    == javascript_pack_tag 'application'
-    == csrf_meta_tags
-
-    link rel='apple-touch-icon' sizes='180x180' href='/apple-touch-icon.png'
-    link rel='icon' type='image/png' href='/favicon-32x32.png' sizes='32x32'
-    link rel='icon' type='image/png' href='/favicon-16x16.png' sizes='16x16'
-    link rel='manifest' href='/manifest.json'
-    link rel='mask-icon' href='/safari-pinned-tab.svg' color='#e21c3d'
-    meta name='theme-color' content='#ffffff'
-
-    <!--[if IE 9]>
-      = stylesheet_link_tag 'ie9.css', media: 'all'
-    <![endif]-->
-    <!--[if lt IE 9]>
-      = javascript_include_tag 'html5shiv'
-      = stylesheet_link_tag 'ie8.css', media: 'all'
-      = javascript_include_tag 'respond.min'
-    <![endif]-->
-
-    - if Figaro.env.google_analytics_key.present?
-      = render 'shared/google_analytics/page_tracking'
-    - if Figaro.env.newrelic_browser_key.present? && Figaro.env.newrelic_browser_app_id.present?
-      = render 'shared/newrelic/browser_instrumentation'
-
-  body class="#{Rails.env}-env site sm-bg-light-blue"
-    .site-wrap
-      = render 'shared/i18n_mode' if FeatureManagement.enable_i18n_mode?
-      = render 'shared/no_pii_banner' if FeatureManagement.no_pii_mode?
-      = render 'shared/usa_banner'
-      - if content_for?(:nav)
-        = yield(:nav)
-      - else
-        = render decorated_session.nav_partial
-      .container
-        div class="px2 py2 sm-py5 sm-px6 mx-auto sm-mb5 border-box card #{yield(:card_cls)}"
-          = render 'shared/flashes'
-          == yield
-    = render 'shared/footer_lite'
-
-    #session-timeout-cntnr
-    - if current_user
-      = auto_session_timeout_js
-    - else
-      = auto_session_expired_js
-
-    - if FeatureManagement.enable_i18n_mode?
-      == javascript_pack_tag 'i18n-mode'
-
-    - if Figaro.env.participate_in_dap == 'true' && !session_with_trust?
-      = render 'shared/dap_analytics'
+= render template: 'layouts/base'
