--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -12,7 +12,7 @@ p.mt-tiny.mb0#email-description
 
   = f.input :email, required: true, input_html: { 'aria-describedby': 'email-description' }
   = f.input :request_id, as: :hidden, input_html: { value: request_id }
-  = render 'shared/recaptcha'
+  = render 'shared/recaptcha' if recaptcha_enabled
   = f.button :submit, t('forms.buttons.continue'), class: 'mt2'
 
 .mt2.pt1.border-top
