--- a/app/views/users/phone_setup/index.html.slim
+++ b/app/views/users/phone_setup/index.html.slim
@@ -21,7 +21,8 @@ p.mt-tiny.mb0 = @presenter.info
         input_html: { class: 'phone col-8 mb4' }
   = f.button :submit, t('forms.buttons.send_security_code')
 .mt2.pt1.border-top
-  = link_to t('devise.two_factor_authentication.two_factor_choice_cancel'), two_factor_options_path
+  - path = current_user.piv_cac_enabled? ? account_recovery_setup_path : two_factor_options_path
+  = link_to t('devise.two_factor_authentication.two_factor_choice_cancel'), path
 
   = stylesheet_link_tag 'intl-tel-number/intlTelInput'
   = javascript_pack_tag 'intl-tel-input'
