Update profile attempts fail screen

--- a/app/views/shared/_failure.html.slim
+++ b/app/views/shared/_failure.html.slim
@@ -5,7 +5,7 @@
 
 h1.h3.mb1.mt3.my0 = presenter.header
 
-p = presenter.description
+p == presenter.description
 
 .col-2
   hr class="mt3 mb2 bw4 rounded border-#{presenter.state_color}"
