--- a/app/views/users/piv_cac_authentication_setup/new.html.slim
+++ b/app/views/users/piv_cac_authentication_setup/new.html.slim
@@ -1,11 +1,12 @@
 - title @presenter.title
 
 h1.h3.my0 = @presenter.heading
-p.mt-tiny.mb3 = @presenter.description
+.no-spinner
+  p.mt-tiny.mb3 = @presenter.description
 
-= link_to @presenter.piv_cac_capture_text,
-              @presenter.piv_cac_service_link,
-              class: 'btn btn-primary'
+  = link_to @presenter.piv_cac_capture_text,
+                @presenter.piv_cac_service_link,
+                class: 'btn btn-primary activate-spinner'
+
+= render 'shared/spinner'
 = render 'shared/cancel_or_back_to_options'
-
-== javascript_pack_tag 'clipboard'
