--- a/app/views/idv/shared/other_failure.html.slim
+++ b/app/views/idv/shared/other_failure.html.slim
@@ -2,4 +2,4 @@
 p == presenter.warning_message
 
 .mt4
-  = link_to presenter.button_text, idv_session_path, class: 'btn btn-primary'
+  = link_to presenter.button_text, presenter.button_path, class: 'btn btn-primary'
