Update spec, i18n path

--- a/app/assets/javascripts/i18n-strings.js.erb
+++ b/app/assets/javascripts/i18n-strings.js.erb
@@ -12,7 +12,7 @@ window.LoginGov = window.LoginGov || {};
   'idv.errors.pattern_mismatch.personal_key',
   'idv.errors.pattern_mismatch.ssn',
   'idv.errors.pattern_mismatch.zipcode',
-  'idv.modal.button.warning',
+  'idv.failure.button.warning',
   'instructions.password.strength.i',
   'instructions.password.strength.ii',
   'instructions.password.strength.iii',
