--- a/app/assets/stylesheets/email.css.scss
+++ b/app/assets/stylesheets/email.css.scss
@@ -38,6 +38,28 @@ h4 {
 
 .button.large.expanded table a { padding: 20px 0; }
 
+.button.expanded.large btn-warn-bkg {
+  background-color: $white;
+  border: 0;
+
+  &:hover {
+    background-color: $white;
+  }
+}
+
+.btn-warn-bkg btn-warn {
+  background-color: #fff7f8;
+  border: 2px solid #f00;
+  border-radius: 8px;
+  color: $gray;
+  padding: 10px;
+  width: 50%;
+}
+
+.half {
+  width: 50%;
+}
+
 .footer {
   background: $secondary-color;
 
