LG-459 Clean up localizations
**Why**:
- We like to keep our keys sorted alphabetically, but many files were
not sorted
- The configuration for the `i18n-tasks` gem was ignoring all strings
in the `config/locales/devise` folder, and so we ended up with lots of
unused strings.

**How**:
- Run `i18n-tasks normalize` to sort the keys
- Add `i18n-tasks normalize` to the `make normalize_yaml` script so
that keys get sorted as part of our normalization
- Remove the `line-width` setting from the `i18n-tasks` config because
when you run `i18n-tasks normalize`, it also changes the formatting to
not wrap at 80 characters, but we expect our files to be wrapped at
80 characters (which is the default behavior of Psych, the Ruby YAML
parser).
- Move the non-Devise strings to their own section and ignore them
when `i18n-tasks` thinks they are unused (usually due to interpolation)
- Remove any remaining unused files using `i18n-tasks remove-unused`

--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -42,13 +42,13 @@ h1.hide = t('titles.account')
 
   = render 'account_item',
     name: t('account.index.authentication_app'),
-    content: content_tag(:em, t(@view_model.totp_content)),
+    content: content_tag(:em, @view_model.totp_content),
     action: @view_model.totp_partial
 
   - if current_user.piv_cac_available?
     = render 'account_item',
       name: t('account.index.piv_cac_card'),
-      content: content_tag(:em, t(@view_model.piv_cac_content)),
+      content: content_tag(:em, @view_model.piv_cac_content),
       action: @view_model.piv_cac_partial
 
   - @view_model.manage_personal_key_partial do
