Added red colors

--- a/app/assets/stylesheets/variables/_colors.scss
+++ b/app/assets/stylesheets/variables/_colors.scss
@@ -22,3 +22,5 @@ $gray-light: #ddd !default;
 $gray-lighter: #fafafa !default;
 $black: #111 !default;
 $pink: #eb4d67 !default;
+$red: #f00 !default;
+$red-lightest: #fff7f8 !default;
