--- a/app/assets/stylesheets/email.css.scss
+++ b/app/assets/stylesheets/email.css.scss
@@ -48,8 +48,8 @@ h4 {
 }
 
 .btn-warn-bkg btn-warn {
-  background-color: #fff7f8;
-  border: 2px solid #f00;
+  background-color: $red-lightest;
+  border: 2px solid $red;
   border-radius: 8px;
   color: $gray;
   padding: 10px;
