LG-365 Make CTA full width on mobile for certain screens
**Why**: Example IDV phone verification step page isn't
rendering button at full-width at smaller screen sizes.
Most of our views are similar.

**How**: Adjust button (and input, in the case of our
phone input control) styling on these pages to be
responsive at full-width and smaller screen sizes (our
main break point presently occurs at 40em/640px).

Tested in Firefox and Chrome were the following flows:

- sign-up
- sign-in
- password reset
- IDV process
- etc.

--- a/app/views/idv/phone/new.html.slim
+++ b/app/views/idv/phone/new.html.slim
@@ -18,7 +18,7 @@ ul.py1.m0
   - if FeatureManagement.enable_usps_verification?
       = render 'verification_options'
 
-  = f.button :submit, t('forms.buttons.continue'), class: 'btn-wide mt6'
+  = f.button :submit, t('forms.buttons.continue'), class: 'btn-wide mt6 sm-col-6 col-12'
 
 = render 'shared/cancel', link: idv_cancel_path
 
