--- a/app/views/idv/jurisdiction/new.html.slim
+++ b/app/views/idv/jurisdiction/new.html.slim
@@ -20,6 +20,7 @@ p.mt4.mb0 id='jurisdiction-label' = t('idv.messages.jurisdiction.where')
   p = link_to t('idv.messages.jurisdiction.no_id'), idv_jurisdiction_fail_path(:no_id)
 
   .mt4
-    button type='submit' class='btn btn-primary btn-wide' = t('forms.buttons.continue')
+    button type='submit' class='btn btn-primary btn-wide sm-col-6 col-12'
+      = t('forms.buttons.continue')
 
 = render 'shared/cancel', link: idv_cancel_path
