--- a/app/views/shared/_user_verify_password.html.slim
+++ b/app/views/shared/_user_verify_password.html.slim
@@ -3,4 +3,4 @@ p = t('idv.messages.sessions.review_message')
 = simple_form_for(current_user, url: update_path,
     html: { autocomplete: 'off', method: :put, role: 'form' }) do |f|
   = f.input :password, label: t('idv.form.password'), required: true
-  = f.button :submit, t('forms.buttons.continue'), class: 'btn btn-primary btn-wide'
+  = f.button :submit, t('forms.buttons.continue'), class: 'btn btn-primary btn-wide sm-col-6 col-12'
