--- a/app/views/sign_up/passwords/new.html.slim
+++ b/app/views/sign_up/passwords/new.html.slim
@@ -12,7 +12,8 @@ p.mt2.mb0#password-description
   = render 'devise/shared/password_strength'
   = hidden_field_tag :confirmation_token, @confirmation_token, id: 'confirmation_token'
   = f.input :request_id, as: :hidden, input_html: { value: params[:request_id] || request_id }
-  = f.button :submit, t('forms.buttons.continue'), class: 'btn-wide mb3'
+  div
+    = f.button :submit, t('forms.buttons.continue'), class: 'sm-col-6 col-12 btn-wide mb3'
 
 = render 'shared/password_accordion'
 
