Fix Intl SMS bugs more comprehensively
This is a follow up to the previous commit which adds the following:

- Rescue Twilio errors when signing in and display the OTP verification
page with an error message, allowing the user to try the phone call
option, or signing in with their personal key
- Capture the country code and context along with Twilio errors so we
can more easily see which countries are affected
- Don't change the user's OTP delivery preference if the last preference
they used resulted in a Twilio error. For example, if a user normally
uses voice, but for some reason didn't get the phone call, and then
tries to send an SMS to a landline, resulting in an error message, we
should leave their preference as voice so they won't get an error the
next time they sign in.
- Add the phone number country to the Exception Notification emails

--- a/app/views/exception_notifier/_session.text.erb
+++ b/app/views/exception_notifier/_session.text.erb
@@ -16,6 +16,8 @@ Referer: <%= @request.referer %>
 <% session['user_return_to'] = session['user_return_to']&.split('?')&.first %>
 Session: <%= session %>
 
-User UUID: <%= @kontroller.analytics_user.uuid %>
+<% user = @kontroller.analytics_user %>
+User UUID: <%= user.uuid %>
+User's Country (based on phone): <%= Phonelib.parse(user.phone).country %>
 
 Visitor ID: <%= @request.cookies['ahoy_visitor'] %>
