LG-428 Build 2FA selection at sign in
**Why**:  We need the ability to select from multiple two factor methods in a streamlined manner.

**How**: Create a new 2fa selection screen upon login which will display 2fa options currently configured for the user.  Add a new configure additional 2fa methods screen prior to the redirect back to the SP (or accounts page) which will present 2fa options not yet configured for the user so they can add additional second factors to their accounts as they become available.  Standardize and simplify all the 2fa screens with a single layout with clear instructions for each 2fa including a remember browser option as well as options to select a different 2fa or cancel.  Provide an account reset option (or pending cancel) as a last resort.  Finally, this PR DRYs up the code somewhat.  However, a subsequent PR will refactor both the creation and login process into a more service based architecture.

--- a/app/views/shared/_cancel_or_back_to_options.html.slim
+++ b/app/views/shared/_cancel_or_back_to_options.html.slim
@@ -2,4 +2,4 @@
 - if user_fully_authenticated?
   = link_to cancel_link_text, account_path, class: 'h5'
 - else
-  = link_to t('devise.two_factor_authentication.two_factor_choice_cancel'), two_factor_options_path
+  = link_to t('two_factor_authentication.choose_another_option'), two_factor_options_path
