--- a/app/views/shared/_fallback_links.html.slim
+++ b/app/views/shared/_fallback_links.html.slim
@@ -1,3 +1,6 @@
 p.mt3#code-instructs = @presenter.help_text
-- presenter.fallback_links.each do |link|
-  p = link
+h4.my0 = @presenter.fallback_question
+= link_to(t('two_factor_authentication.login_options_link_text'), \
+  login_two_factor_options_path)
+br
+br
