--- a/app/views/users/phone_setup/index.html.slim
+++ b/app/views/users/phone_setup/index.html.slim
@@ -23,7 +23,7 @@ p.mt-tiny.mb0 = @presenter.info
     = f.button :submit, t('forms.buttons.send_security_code'), class: 'sm-col-6 col-12 btn-wide mb3'
 .mt2.pt1.border-top
   - path = current_user.piv_cac_enabled? ? account_recovery_setup_path : two_factor_options_path
-  = link_to t('devise.two_factor_authentication.two_factor_choice_cancel'), path
+  = link_to t('two_factor_authentication.choose_another_option'), path
 
   = stylesheet_link_tag 'intl-tel-number/intlTelInput'
   = javascript_pack_tag 'intl-tel-input'
