--- a/app/views/idv/phone/new.html.slim
+++ b/app/views/idv/phone/new.html.slim
@@ -20,6 +20,6 @@ ul.py1.m0
 
   = f.button :submit, t('forms.buttons.continue'), class: 'btn-wide mt6 sm-col-6 col-12'
 
-= render 'shared/cancel', link: idv_cancel_path
-
+.mt2.pt1.border-top
+  = link_to t('links.cancel'), idv_cancel_step_path(:phone), class: 'h5'
 = render @view_model.modal_partial, view_model: @view_model
