--- a/app/views/shared/_cancel.html.slim
+++ b/app/views/shared/_cancel.html.slim
@@ -2,7 +2,7 @@
 - other_cancel = link || decorated_session&.sp_return_url || profile_path
 
 .mt2.pt1.border-top
-  - if user_signing_up? || user_verifying_identity?
+  - if user_signing_up?
     - method = user_signing_up? ? :delete : :get
 
     = button_to cancel_link_text, cancel, method: method,
