--- a/app/views/idv/jurisdiction/new.html.slim
+++ b/app/views/idv/jurisdiction/new.html.slim
@@ -24,4 +24,4 @@ p.mt4.mb0 id='jurisdiction-label' = t('idv.messages.jurisdiction.where')
       = t('forms.buttons.continue')
 
 .mt2.pt1.border-top
-  = link_to t('links.cancel'), idv_cancel_step_path(:jurisdiction), class: 'h5'
+  = link_to t('links.cancel'), idv_cancel_step_path(step: :jurisdiction), class: 'h5'
