--- a/app/views/idv/otp_delivery_method/new.html.slim
+++ b/app/views/idv/otp_delivery_method/new.html.slim
@@ -49,4 +49,4 @@ p.mt1 = t('idv.messages.otp_delivery_method.phone_number_html',
         class: 'sm-col-6 col-12 btn btn-primary'
 .mt3.border-top
   .mt1
-    = link_to t('links.cancel'), idv_cancel_step_path(:phone_otp_delivery_selection)
+    = link_to t('links.cancel'), idv_cancel_step_path(step: :phone_otp_delivery_selection)
