Add translations for cancel screen

--- a/app/views/idv/cancellations/destroy.html.slim
+++ b/app/views/idv/cancellations/destroy.html.slim
@@ -5,4 +5,4 @@ ul class="list-reset #{@presenter.state_color}-dots"
     li = effect
 
 / TODO: Have the presenter put the SP name or "account" here
-.mt2 = link_to "#{t('headings.cancellations.return_to')} #{'ADD SP NAME OR ACCOUNT'}"
+.mt2 = link_to t('idv.cancel.return_to_account'), account_path
